test/errors/field_names_error/zs/defined_type_error.zs
package defined_type_error;

subtype int32 Defined;

struct Item
{
    uint16      param;
    Defined     a;
    uint32      Defined;
};
